--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
     font-size: 1.3rem;
 }
 
+
 .task button {
     flex: .5;
     border-radius: 10px;
@@ -97,3 +98,9 @@ body {
     color: red;
     transition: all 0.3s ease
 }
+
+/* Javascript Styling */
+
+.task-active {
+    text-decoration: line-through;
+} 
