Attempt 1 to fix bug
when a task is being deleted, it also deletes other tasks. An attempt to create a new task is successful, and it is being appended to the DOM; however, it is not displaying

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     transition: all 0.3s ease
 }
 
-/* Styles for added task */
+/* Styles for JS added task */
 
 .task {
     display: flex;
@@ -101,6 +101,6 @@ body {
 
 /* Javascript Styling */
 
-.li-active {
+.line-through {
     text-decoration: line-through;
 } 
